try to fix 100vh bug on mobile safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,10 +9,22 @@
     font-display: swap;
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 body {
   font-family: 'SF Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: $background-color;
   margin: 0;
+  min-height: 100vh;
+  /* mobile viewport bug fix */
+  min-height: -webkit-fill-available;
+}
+
+/* Use a CSS variable for viewport height */
+:root {
+  --vh: 1vh;
 }
