--- a/src/Gallery.scss
+++ b/src/Gallery.scss
@@ -5,7 +5,8 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
   overflow-y: scroll;
   overflow-x: hidden;
   scroll-snap-type: y mandatory;
@@ -20,7 +21,8 @@
 
 .gallery-slide {
   width: 100vw;
-  height: 100vh;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
   scroll-snap-align: start;
   scroll-snap-stop: always;
   display: flex;
