--- a/src/SplashPage.scss
+++ b/src/SplashPage.scss
@@ -3,7 +3,8 @@
 .splash-container {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
   overflow: hidden;
   cursor: var(--enter-cursor) 14 4, auto;
 }
@@ -39,7 +40,8 @@
   display: block;
   width: 100%;
   aspect-ratio: 4 / 1;
-  height: 100vh;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 .splash-content {
